--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.11.0",
+    "react-burger-menu": "^2.9.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.3",
+    "react-spinners": "^0.9.0"
   },
   "scripts": {
     "predeploy": "npm run build",
